--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <style>
         body {
-        background-image: url("assets/images/marvel.gif");
+        background-image: url("assets/images/marvel3.gif");
         background-color: black;
+        background-size: 100%
+      
+  
       
     }
    
